File Name: CHANGES

05/17/2012 FASP 0.8.3:
- Add safe-guard check for MaxIt and tol to prevent unexpected error in iterative methods.
- Change the format the input files in "test/ini" slightly.
- Make output of iterative methods more uniform.

05/16/2012 FASP 0.8.2: 
- Fix a bug in refinement. Make generation of mesh_aux data structure work for any number of elements. 
- Add a few examples in "tutorial".
- Change inparam.itsolver_type to inparam.solver_type to make the name more logical.
- Change input file in "test/ini" for the new setting.
- Revise a few functions arguments which should be "const" but did not assigned as "const".
- Modify linked list data structure slightly.

05/13/2012 FASP 0.8.1: 
- Further optimizations on P1 FEM; more coming.
- Format source code in "test"; and some minor format and code changes.
- Fix a bug in src/io.c for BSR output.
- Clean up several BSR rouitnes, including their Doxygen. 

05/02/2012 FASP 0.8.0: 
- Auto indentation of sources, mostly.

05/01/2012 FASP 0.7.8: 
- Update Doxygen: Fix a few bugs in Doxygen.
- Update interface of GCG. 
- Clean up and update interfaces for vGMRES and vFGMRES.
- Clean up and update interfaces for PGMRES.
- Rewrite part of PMINRES.

05/01/2012 FASP 0.7.4: 
- Rewrite PBCGS for optimizing memory and CPU usage.

04/30/2012 FASP 0.7.3: 
- Clean up and update interfaces of PBCGS.
- Clean up and update interfaces of PCG.

04/26/2012 FASP 0.7.1: 
- Move factor.f to core/src/and add documentation.
- Fix a bug in Makefile. 

04/25/2012 FASP 0.7.0: 
- Put external packages into different directories. 

04/21/2012 FASP 0.6.7: 
- Remove the non-GPL ILU from ilu.f and make changes for "core" accordingly.

04/10/2012 FASP 0.6.5: 
- Rename "examples" as "tutorial". 
- Add the new "Todo" list.

04/09/2012 FASP 0.6.4: 
- Fix some Doxygen format problems. 
- Restructure the test problems in "test" directory. 
- Code optimization for P1 FEM method for the Poisson. 
- Add FEM for the Heat equation. 
