@@ -1,0 +1,66 @@
+%----------------------------------------------%
+% input parameters                             %
+% lines starting with % are comments           %
+% must have spaces around the equal sign "="   %
+%----------------------------------------------%
+
+workdir  = ./data/      % work directory, no more than 128 characters
+print_level    = 3      % How much information to print out 
+ 
+%----------------------------------------------%
+% parameters for iterative solvers             %
+%----------------------------------------------%
+
+precond_type   = 2      % Precond type:  0 NULL | 1 Diag | 2 AMG | 3 ILU | 4 FMG
+stop_type      = 1      % Stopping type: 1 ||r||/||b|| | 2 ||r||_M/||b||_M | 3 ||r||/||x||  
+itsolver_tol   = 1e-8   % Solver tolerance 
+itsolver_maxit = 1000   % Maximal ieration number 
+
+%----------------------------------------------%
+% parameters for ILU preconditioners           %
+%----------------------------------------------%
+
+ILU_type       = 1      % 1 ILUk | 2 ILUt | 3 ILUtp 
+ILU_lfil       = 2      % the level of fill-in for ILU 
+ILU_relax      = 0.9    % add the dropped entries to diagnal by this relax parameter
+ILU_droptol    = 0.1    % the drop tolerence for ILU 
+ILU_permtol    = 0.001  % permutation toleration for ILUtp
+
+%----------------------------------------------%
+% parameters for AMG preconditioners           %
+%----------------------------------------------%
+
+AMG_type                 = C     % C classic AMG | SA smoothed aggregation AMG | UA unsmoothed aggregation AMG
+AMG_cycle_type           = V     % V V-cycle | W W-cycle | A AMLI-cycle | NA Nonlinear AMLI-cycle
+AMG_smoother             = GS    % GS | JACOBI | SGS | SOR | SSOR | GSOR | SGSOR | POLY   
+AMG_levels               = 20    % max number of levels
+AMG_ILU_levels           = 0     % number of levels using ILU smoother
+AMG_relaxation           = 1.1   % over relaxation parameter for SOR smoother 
+AMG_presmooth_iter       = 1     % number of presmoothing
+AMG_postsmooth_iter      = 1     % number of postsmoothing
+AMG_coarse_dof           = 500   % max number of coarse degrees of freedom
+AMG_tol                  = 1e-10 % tolerance for AMG
+AMG_maxit                = 1     % number of AMG iterations
+AMG_coarse_scaling       = OFF   % switch of scaling of the coarse grid correction
+AMG_amli_degree          = 2     % degree of the polynomial used by (nonlinear) AMLI cycle
+AMG_nl_amli_krylov_type  = 6     % type of krylov method used by Nonlinear AMLI cycle: 6 FGMRES | 7 GCG
+
+%----------------------------------------------%
+% parameters for classical AMG method          %
+%----------------------------------------------%
+
+AMG_coarsening_type      = 1     % coarsening type 1: modified RS | 3: Compatible Relaxation
+AMG_interpolation_type   = 1     % 1 standard | 3 energy min in C 
+AMG_strong_threshold     = 0.25  % strong threshold
+AMG_truncation_threshold = 0.4   % truncation threshold
+AMG_max_row_sum          = 0.9   % max row sum
+
+%----------------------------------------------%
+% parameters for smoothed aggregation AMG      %
+%----------------------------------------------%
+
+AMG_strong_coupled       = 0.08   % strong coupled threshold
+AMG_max_aggregation      = 20     % max size of each aggregation 
+AMG_tentative_smooth     = 0.67   % smooth factor for smoothing the tentative prolongation
+AMG_smooth_filter        = OFF    % switch for filtered matrix for smoothing
+
